<resources>
    <string name="app_name">My Business</string>
    <string name="button_text">Button</string>
    <string name="disabled">Disabled</string>
    <string name="title_activity_setting">Setting</string>
    <string name="login_title">Login</string>

    <!-- Strings for Login Screen -->
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Login</string>
    <string name="login_successful">Login successful!</string>
    <string name="login_failed">Login failed. Please check your credentials.</string>
    <string name="error_username_empty">Username cannot be empty</string>
    <string name="error_password_empty">Password cannot be empty</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="button_add_customer">Add Customer</string>
    <string name="button_add_product">Add Product</string>
</resources>